# MyWeeksBot

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.save  Dockerfile.save.1  Makefile  README.md  alembic.ini  alembic1.ini  bot.py  db_test.py  docker-compose.yml  pyproject.toml  requirements.txt  scheduler.dockerfile  test2.py  udo netstat -tulpn | grep ":5432" || grep ":6379"
backup/: alembic_version.csv
bot/: __main__.py
bot/cache/: __init__.py  redis.py
bot/core/: config.py  loader.py  redis_loader.py
bot/database/: engine.py
bot/handlers/: __init__.py  changelog.py  menu.py  premium.py  profile.py  report.py  schedule.py  start.py
bot/image_generator/: images.py
bot/keyboards/: default_commands.py
bot/middlewares/: __init__.py  auth.py  blocked.py  callspam.py  database.py  (+3 more)
buildfiles/: ngrok.dockerfile  ngrok.yml  postgres.dockerfile  scheduler.dockerfile  scheduler.dockerfile.save
cache/: redis.py  serialization.py
core/: config.py  loader.py
database/: __init__.py  database.py  database_load.py  db_key_commands.py  dbcommands.py  dbnotifcommands.py  dbusercommands.py  engine.py  user.py
handlers/: __init__.py  changelog.py  menu.py  premium.py  profile.py  report.py  start.py
keyboards/: default_commands.py
middlewares/: __init__.py  database.py  throttling.py
scheduler/: main.py
services/: keys.py  notifs.py  users.py
tests/: __init__.py  db.py  matches.html  matches1.html  matches2.html  proxys.txt  scheduler.py  small_tests.py  test.py  test2.py
utils/: last_commits.py  states.py  time_localizer.py
(+170 files in other folders)
