[tool.poetry]
name = "myweeksbot"
version = "0.7.0"
description = "t.me/myweeksbot"
authors = ["Akim <akimslys2003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
alembic = "^1.13.1"
aioredis = "^2.0.1"
babel = "^2.14.0"
gitpython = "^3.1.42"
pillow = "^10.2.0"
redis = "^5.0.2"
timezonefinder = "^6.4.1"
sqlalchemy = "^2.0.27"
orjson = "^3.9.15"
datetime = "^5.4"
pytz = "^2024.1"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
aiocache = "^0.12.2"
typing = ">=2.7"
arq = "^0.25.0"
pipenv = "^2023.12.1"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
pip = "^24.0"
psycopg2-binary = "^2.9.9"
fastapi = "^0.110.0"
uvloop = "^0.19.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
ujson = "^5.9.0"
beautifulsoup4 = "4.12.3"
hiredis = "^2.3.2"
aiomcache = "^0.8.1"
lxml = "5.2.0"
hltv-async-api = "0.6.1"


[tool.poetry.group.dev.dependencies]
cachetools = "^5.3.3"
DateTime = "^5.4"
pytz = "^2024.1"
asyncio = "^3.4.3"
key-generator = "1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
